Добавлены картинки на главную и удаление профиля.

--- a/NewsStudyRostelecom/main/static/main/css/style.css
+++ b/NewsStudyRostelecom/main/static/main/css/style.css
@@ -98,3 +98,8 @@ body .single_news{
   }
 }
 // подробнее про hover-эффекты: https://www.w3schools.com/cssref/sel_hover.php
+
+.contact-form{
+    float:left;
+    margin:10px 30%;
+}
