--- a/NewsStudyRostelecom/main/templates/main/index.html
+++ b/NewsStudyRostelecom/main/templates/main/index.html
@@ -11,13 +11,25 @@
 
     <div class="single_news">
         <div class="p-4 p-md-5 text-black rounded bg-info">
-            <div class="col-md-6 px-0">
+            <div class="col-md-{% if article.image_set.all %}6{% else %}12 {% endif %} px-0">
                 <h1 class="display-4 fst-italic"> {{ article.title }}</h1>
                 <p class="lead my-3">{{ article.date }} {{ article.anouncement }}</p>
                 <p class="lead my-3">передал: {{ article.author }} </p>
-                <p class="lead mb-0"><a href="{{ article.get_absolute_url }}" class="text-black fw-bold">Полное
+                <p class="lead mb-0"><a href="{% url 'news_detail' article.pk %}" class="text-black fw-bold">Полное
                     сообщение...</a></p>
+                <p><small>Просмотры: {{ article.get_views }}</small></p>
+                <a class="btn btn-succes" href="{% url 'favorites' article.pk %}"><i class="fa fa-bookmark menu icon">В избранное</i></a>
             </div>
+            {% if article.image_set.all %}
+                <div class="col-md-6 px-0">
+                    <img src="{{ article.image_set.all.0.image.url }}"
+                         style="width:100%; height:auto; border-radius:5px;">
+                    <br>
+                    <br>
+                    <img src="{{ article.image_set.all.1.image.url }}"
+                         style="width:100%; height:auto; border-radius:5px;">
+                </div>
+            {% endif %}
         </div>
     </div>
 
