--- a/NewsStudyRostelecom/users/templates/users/edit_profile.html
+++ b/NewsStudyRostelecom/users/templates/users/edit_profile.html
@@ -84,7 +84,7 @@
 
                     <div class="text-center">
                         <button class="btn btn-outline-success" style="margin-bottom:15px;"
-                           href="{% url 'profile' %}"> Сохранить </button>
+                           href="{% url 'home' %}"> Сохранить </button>
                         <a class="btn btn-outline-danger" style="margin-bottom:15px;"
                            href="{% url 'password' %}"> Изменить пароль </a>
                     </div>
