--- a/NewsStudyRostelecom/users/templates/users/my_favorites.html
+++ b/NewsStudyRostelecom/users/templates/users/my_favorites.html
@@ -18,12 +18,6 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="input-group">
-                    <select class="form-select" name="author_filter" style="width:40%">
-                        <option value="0">Все авторы</option>
-                        {% for author in author_list %}
-                            <option value="{{ author.id }}" {% if selected_author == author.id %} selected {% endif %}> {{ author.username }}</option>
-                        {% endfor %}
-                    </select>
                     <select class="form-select" name="category_filter" style="width:40%">
                         <option value="0">Все категории</option>
                         {% for cat in categories %}
@@ -38,7 +32,7 @@
 
         </div>
          <!--  пагинатор -->
-        {% if total > 1 %}
+        {% if total > 5 %}
             <div class="row">
                 <nav aria-label="Page navigation example">
                   <ul class="pagination">
@@ -64,7 +58,7 @@
     {% for article in articles %}
     <div class="single_news">
         <div class="p-4 p-md-5 text-black rounded bg-info">
-            <div class="col-md-6 px-0">
+            <div class="col-md-{% if article.image_set.all %}6{% else %}12 {% endif %} px-0">
                 <h1 class="display-4 fst-italic"> {{ article.title }}</h1>
                 <p class="lead my-3">{{ article.date }} {{ article.anouncement }}</p>
                 <p class="lead my-3">передал: {{ article.author }} </p>
@@ -73,6 +67,16 @@
                 <p><small>Просмотры: {{ article.get_views }}</small></p>
                 <a class="btn btn-succes" href="{% url 'favorites' article.pk %}"><i class="fa fa-bookmark menu icon">В избранное</i></a>
             </div>
+            {% if article.image_set.all %}
+                <div class="col-md-6 px-0">
+                    <img src="{{ article.image_set.all.0.image.url }}"
+                         style="width:100%; height:auto; border-radius:5px;">
+                    <br>
+                    <br>
+                    <img src="{{ article.image_set.all.1.image.url }}"
+                         style="width:100%; height:auto; border-radius:5px;">
+                </div>
+            {% endif %}
         </div>
     </div>
     {% endfor %}
