--- a/NewsStudyRostelecom/news/templates/news/search_news.html
+++ b/NewsStudyRostelecom/news/templates/news/search_news.html
@@ -30,47 +30,21 @@
 </script>
 
 
-<div class="content_center">
-    <div class="row">
-        <div class="search">
-            <label for="search_input">Поиск: </label>
-            <input id="search_input">
-            <button class="btn btn-primary">Нвайти</button>
-        </div>
-    </div>
-</div>
+
 
 
 <div class="row">
     <div class="text-center" style="margin-top:30px;">
         <h1>Поиск</h1>
     </div>
-    <div class="content_center">
-        <h6> Фильтры: </h6>
-        <div class="form-group col-8">
-            <form method="post">
-                {% csrf_token %}
-                <div class="input-group">
-                    <select class="form-select" name="author_filter" style="width:40%">
-                        <option value="0">Все авторы</option>
-                        {% for author in author_list %}
-                            <option value="{{ author.id }}" {% if selected_author == author.id %} selected {% endif %}> {{ author.username }}</option>
-                        {% endfor %}
-                    </select>
-                    <select class="form-select" name="category_filter" style="width:40%">
-                        <option value="0">Все категории</option>
-                        {% for cat in categories %}
-                            <option value="{{ forloop.counter }}" {% if selected_category == forloop.counter %} selected {% endif %}> {{ cat.1 }}</option>
-                        {% endfor %}
-                    </select>
-                    <span class="input-group-btn">
-                        <input type="submit" class="btn btn-success" value="Выбрать" style="margin: 0 15px">
-                    </span>
-                </div>
-            </form>
-
+    <div class="row">
+        <div class="search">
+            <label for="search_input">Поиск: </label>
+            <input id="search_input">
+            <button class="btn btn-primary">Найти</button>
         </div>
     </div>
+
 
 
     {% for article in articles %}
