--- a/NewsStudyRostelecom/main/templates/main/sidebar.html
+++ b/NewsStudyRostelecom/main/templates/main/sidebar.html
@@ -20,7 +20,7 @@
 <script>
   $(function() {
     $("#search_input").autocomplete({
-      source: "{% url 'search' %}",
+      source: "{% url 'search_auto' %}",
       select: function (event, ui) { //item selected
         AutoCompleteSelectHandler(event, ui)
       },
@@ -49,7 +49,7 @@
                   </a>
               </li>
               <li class="nav-item">
-                  <a href="{% url 'news_index' %}" {% if request.path == '/news/news_index' %} class="link-active" aria-current="page" {% endif %}>
+                  <a href="{% url 'news_index' %}" {% if request.path == '/news_index' %} class="link-active" aria-current="page" {% endif %}>
                         <i class="fa-solid fa-tv menu-icon {% if request.resolver_match.view_name  == '/news_index/' %} link-active {% endif %}"></i>
                         <div class="d-none d-lg-block"> Все новости</div>
                   </a>
